# mi-fieldcalc

./: .gitignore  CMakeLists.txt  README.md  mi-fieldcalc-config.cmake
cmake/: MetnoGTest.cmake  MetnoUtils.cmake
debian/: changelog  control  copyright  libmi-fieldcalc-dev.install  python3-mi-fieldcalc.install  rules
python/: CMakeLists.txt  py_mi_fieldcalc.cc  test_mi_fieldcalc.py
src/: CMakeLists.txt
src/mi_fieldcalc/: CMakeLists.txt  FieldCalculations.cc  FieldCalculations.h  FieldCalculationsVesselIcing.cc  FieldDefined.cc  FieldDefined.h  MetConstants.cc  MetConstants.h  math_util.h  mi_fieldcalc_version.h  openmp_tools.cc  openmp_tools.h
test/: CMakeLists.txt  FieldCalculationsTest.cc  MetConstantsTest.cc  gtestMain.cc
